Fixed horizontal scroll

--- a/style.css
+++ b/style.css
@@ -93,7 +93,8 @@ nav{
 
 @media screen and (max-width: 768px){
     /* NA VRAGEN */
-    .page-content {
+    html, body {
+        position: relative;
         overflow-x: hidden;
     }
 
